[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/kenney.nl/gameicons/PNG/White/2x/wrench.png" type="Texture" id=1]
[ext_resource path="res://sprites/kenney.nl/gameicons/PNG/White/2x/plus.png" type="Texture" id=2]
[ext_resource path="res://sprites/kenney.nl/gameicons/PNG/White/2x/arrowUp.png" type="Texture" id=3]
[ext_resource path="res://sprites/kenney.nl/gameicons/PNG/White/2x/arrowDown.png" type="Texture" id=4]
[ext_resource path="res://sprites/kenney.nl/gameicons/PNG/White/2x/minus.png" type="Texture" id=5]
[ext_resource path="res://scenes/map_editor/layers_editor.gd" type="Script" id=6]
[ext_resource path="res://scenes/map_editor/layers.tscn" type="PackedScene" id=7]
[ext_resource path="res://prefabs/texture_rect/texture_rect_button.gd" type="Script" id=8]

[node name="LayersEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 666.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Layers" parent="VBoxContainer/ScrollContainer" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 666.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 670.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
columns = 5

[node name="MoveLayerUp" type="TextureRect" parent="VBoxContainer/GridContainer"]
margin_right = 252.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
script = ExtResource( 8 )

[node name="MoveLayerDown" type="TextureRect" parent="VBoxContainer/GridContainer"]
margin_left = 256.0
margin_right = 508.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
script = ExtResource( 8 )

[node name="AddLayer" type="TextureRect" parent="VBoxContainer/GridContainer"]
margin_left = 512.0
margin_right = 764.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
script = ExtResource( 8 )

[node name="DeleteLayer" type="TextureRect" parent="VBoxContainer/GridContainer"]
margin_left = 768.0
margin_right = 1020.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
script = ExtResource( 8 )

[node name="RenameLayer" type="TextureRect" parent="VBoxContainer/GridContainer"]
margin_left = 1024.0
margin_right = 1276.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
script = ExtResource( 8 )
